[package]
name = "rusty-bvg"
version = "0.9.0"
edition = "2024"

[features]
default = []
display = ["rpi-led-matrix", "embedded-graphics"]

[dependencies]
# Platform-independent
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# Hardware-dependent (RPi only, optional)
rpi-led-matrix = { version = "0.4.0", optional = true }
embedded-graphics = { version = "0.7", optional = true }

[dev-dependencies]


