[package]
name = "rusty-bvg"
version = "0.10.0"
edition = "2024"

[features]
default = []
display = ["rpi-led-matrix", "embedded-graphics"]

[dependencies]
# Platform-independent
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "chrono", "env-filter"] }

# Hardware-dependent (RPi only, optional)
rpi-led-matrix = { version = "0.4.0", optional = true }
embedded-graphics = { version = "0.7", optional = true }

[dev-dependencies]


